[package]
name = "hathora-client-sdk"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Utilities for building a Hathora client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
base64 = "0.13.0"
tungstenite = { version = "0.17.3", features = ["native-tls"] }
url = "2.3.1"
anyhow = "1.0.66"
